--- a/src/instruqt_frontend/default.conf
+++ b/src/instruqt_frontend/default.conf
@@ -4,6 +4,7 @@ server {
     location / {
             proxy_pass_request_headers off;
             proxy_set_header traceparent $http_traceparent;
+            proxy_set_header baggage $http_baggage;
             proxy_pass http://frontend/;
     }
 }
