--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,9 +37,11 @@ services:
     environment:
       OTEL_EXPORTER_OTLP_ENDPOINT: "http://collector:4317"
       OTEL_SERVICE_NAME: "store"
+      OTEL_PYTHON_LOG_LEVEL: "info"
+      OTEL_PYTHON_LOG_CORRELATION: "true"
       OTEL_PYTHON_LOGGING_AUTO_INSTRUMENTATION_ENABLED: "true"
       OTEL_PYTHON_EXCLUDED_URLS: "/health"
-    command: ["opentelemetry-instrument", "--logs_exporter", "otlp", "flask", "run", "--host=0.0.0.0", "-p", "9001"]
+    command: ["opentelemetry-instrument", "flask", "run", "--debug", "--host=0.0.0.0", "-p", "9001"]
     depends_on:
       catalog:
         condition: service_started
