--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,7 +41,7 @@ services:
       OTEL_PYTHON_LOG_CORRELATION: "true"
       OTEL_PYTHON_LOGGING_AUTO_INSTRUMENTATION_ENABLED: "true"
       OTEL_PYTHON_EXCLUDED_URLS: "/health"
-    command: ["opentelemetry-instrument", "flask", "run", "--host=0.0.0.0", "-p", "9001"]
+    command: ["opentelemetry-instrument", "--logs_exporter", "otlp", "flask", "run", "--host=0.0.0.0", "-p", "9001"]
     depends_on:
       catalog:
         condition: service_started
