--- a/src/frontend/opentelemetry_module.conf
+++ b/src/frontend/opentelemetry_module.conf
@@ -6,4 +6,4 @@ NginxModuleServiceName proxy;
 NginxModuleServiceNamespace NginxProxyNamespace;
 NginxModuleServiceInstanceId NginxProxyInstanceId;
 NginxModuleResolveBackends ON;
-NginxModuleTraceAsError ON;
+NginxModuleTraceAsError OFF;
