--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,4 @@
 services:
-  catalog:
-    build:
-      context: ./src/catalog/
-    restart: on-failure
-    volumes:
-      - ./logs:/logs
-    command: ["-logfile=/logs/catalog.json"]
-    ports:
-      - "9000:9000"
-    environment:
-      POSTGRES_PASSWORD: "password"
-      POSTGRES_USER: "admin"
-      POSTGRES_ADDR: "postgresql"
-
-      OTEL_EXPORTER_OTLP_ENDPOINT: "http://collector:4317"
-      OTEL_SERVICE_NAME: "catalog"
-    depends_on:
-      postgresql:
-        condition: service_healthy
-      collector:
-        condition: service_started
 
   store:
     build:
@@ -37,6 +16,7 @@ services:
     environment:
       OTEL_EXPORTER_OTLP_ENDPOINT: "http://collector:4317"
       OTEL_SERVICE_NAME: "store"
+      OTEL_RESOURCE_ATTRIBUTES: "service.version=1.0"
       OTEL_PYTHON_LOG_LEVEL: "info"
       OTEL_PYTHON_LOG_CORRELATION: "true"
       OTEL_PYTHON_LOGGING_AUTO_INSTRUMENTATION_ENABLED: "true"
@@ -45,6 +25,28 @@ services:
     depends_on:
       catalog:
         condition: service_started
+      collector:
+        condition: service_started
+
+  catalog:
+    build:
+      context: ./src/catalog/
+    restart: on-failure
+    volumes:
+      - ./logs:/logs
+    command: ["-logfile=/logs/catalog.json"]
+    ports:
+      - "9000:9000"
+    environment:
+      POSTGRES_PASSWORD: "password"
+      POSTGRES_USER: "admin"
+      POSTGRES_ADDR: "postgresql"
+      OTEL_EXPORTER_OTLP_ENDPOINT: "http://collector:4317"
+      OTEL_SERVICE_NAME: "catalog"
+      OTEL_RESOURCE_ATTRIBUTES: "service.version=1.0"
+    depends_on:
+      postgresql:
+        condition: service_healthy
       collector:
         condition: service_started
 
