--- a/src/collector/collector.yml
+++ b/src/collector/collector.yml
@@ -16,18 +16,6 @@ receivers:
       insecure: true
       insecure_skip_verify: true
 
-  prometheus/collector:
-    config:
-      scrape_configs:
-        - job_name: 'otelcol'
-          scrape_interval: 10s
-          static_configs:
-            - targets: ['0.0.0.0:8888']
-          metric_relabel_configs:
-            - source_labels: [__name__]
-              regex: '.*grpc_io.*'
-              action: drop
-
   prometheus/store:
     config:
       scrape_configs:
@@ -98,22 +86,22 @@ exporters:
       # Elastic APM Server secret token
       Authorization: "Bearer ${ELASTIC_APM_SERVER_SECRET}"
 
-service:
-  telemetry:
-    metrics:
-      address: 0.0.0.0:8888
-      level: detailed
+  otlp/debug: 
+    endpoint: "http://collector-debug:4317"
+    tls:
+      insecure: true
 
+service:
   pipelines:
     traces:
       receivers: [ otlp ]
       processors: [ resource, batch ]
-      exporters: [ otlp/elastic]
+      exporters: [ otlp/elastic, otlp/debug ]
     metrics:
-      receivers: [ otlp, prometheus/store, prometheus/collector, postgresql]
+      receivers: [ otlp, prometheus/store, postgresql]
       processors: [ resource, batch ]
-      exporters: [ otlp/elastic]
+      exporters: [ otlp/elastic, otlp/debug ]
     logs:
       receivers: [ otlp, filelog/catalog ]
       processors: [ resource, batch ]
-      exporters: [ otlp/elastic]
+      exporters: [ otlp/elastic, otlp/debug ]
